# SoLvUs

./: .cursorrules  .dockerignore  .gitignore  .railway.env  .windsurfrules  DEMO_SCRIPT.md  Dockerfile.frontend  Dockerfile.garaga  Dockerfile.prover-server  Dockerfile.railway  KB-state.md  README.md  SUBMISSION.md  debug_proof.ts  docker-compose.yml  gen_full_help.txt  generate_prover_toml.ts  generate_verifier_manifest.ts  netlify.toml  package-lock.json  package.json  startup.sh  tsconfig.json  vercel.json  verify_relayer.ts
.agent/: AGENT_RULES.md  GRAVEYARD.md  INVARIANTS.md  PHASE0_GATE.md  PROJECT_MAP.md  SESSION_LOG.md  STACK.md
.github/workflows/: generate-verifier.yml  zk-circuit.yml
artifacts/devnet/: groth16_fixture.json  verifier_manifest.json
cairo/: Scarb.toml  build_log.txt  contract.cairo  deployment.json
cairo/scripts/: deploy.ts  deploy_account.ts
cairo/src/: contract.cairo  honk_verifier_constants.cairo  lib.cairo
circuits/: Nargo.toml  Prover.toml  debug-proof.toml
circuits/src/: debug.nr  fixed_sha256.nr  main.nr
config/: compliance-audit-journal.jsonl  demo-proof-artifact.json  demo.env  devnet-zkusd-mint-keypair.json  devnet.env
demo-ui/: index.html  package.json
demo-ui/src/: App.tsx  VesuMock.tsx  index.css
docs/: ADR.md  BLUEPRINT.md  CONTRACTS.md  DEVNET_RUNBOOK.md  RAILWAY_RUNBOOK.md  STABLEHACKS_2MIN_VIDEO_SCRIPT.md  STABLEHACKS_INSTITUTIONAL_VAULT_STRATEGY.md  STABLEHACKS_SUBMISSION_COPY.md  VHEATM_CYCLE_6_HACKATHON_OPTIMIZATION.md
phase0/: poseidon_verify.ts  xverse_format.ts
scripts/: build-real-verifier.sh  demo-preflight.sh  deploy-devnet.sh  deploy.ts  eddsa_keygen.ts  fix_vk.mjs  generate-demo-proof-artifact.ts  init-protocol-config.mjs  institutional-mint-smoke.mjs  railway-bootstrap.mjs
solana/: Anchor.toml  Cargo.toml  verifier_contract.rs
solana/programs/groth16_verifier/: Cargo.toml  README.md
solana/programs/groth16_verifier/src/: lib.rs
solana/programs/liquidation/: Cargo.toml
solana/programs/liquidation/src/: lib.rs
solana/programs/solvus/: Cargo.toml
solana/programs/solvus/src/: lib.rs
src/: calldata_helper.ts  orchestrator.ts  types.d.ts
src/demo/: pregenerate.ts
src/identity/: nullifier_secret.ts
src/prover/: inputs.ts
ui/: package.json
(+9 files in other folders)
