[package]
name = "groth16_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groth16_verifier"

[dependencies]
solana-program = { version = "2.3.0", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("custom-heap", "custom-panic"))',
] }
