[package]
name = "liquidation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidation"

[features]
default = []
cpi = []
no-entrypoint = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solvus = { path = "../solvus", features = ["cpi", "no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("anchor-debug", "cpi", "custom-heap", "custom-panic", "no-entrypoint", "no-idl", "no-log-ix-name"))',
] }
