[package]
name = "solvus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solvus"

[features]
default = []
cpi = []
no-entrypoint = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pythnet-sdk = { version = "2.3.1", features = ["solana-program"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic", "no-entrypoint", "no-idl", "no-log-ix-name"))',
] }
